<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">语音示例</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>


    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
        <item>#com.baidu.android.voicedemo.recognization.online.InFileStream.create16kStream()</item>
    </string-array>

    <string name="decoder_default"></string>
    <string-array name="decoder_list">
        <item>@string/decoder_default</item>
        <item>0, 纯在线</item>
        <item>2, 离线语法及在线识别混合, 在线优先</item>
    </string-array>

    <string name="language_default"></string>
    <string-array name="language">
        <item>@string/language_default</item>
        <item>cmn-Hans-CN, 普通话(默认)</item>
        <item>en-GB, 英语(美国)</item>
        <item>sichuan-Hans-CN, 四川话</item>
        <item>yue-Hans-CN, 粤语</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>enable, 开启本地语义解析（不支持英语）</item>
        <item>enable-all, 在enable参数基础上,临时解析结果也做本地语义分析</item>
        <item>disable, 不适用语义解析</item>
    </string-array>

    <string name="translate_default"></string>
    <string-array name="translate">
        <item>@string/translate_default</item>
        <item>zh, 中文</item>
        <item>en, 英语(美国)</item>
        <item>yue, 粤语</item>
        <item>jp, 日语</item>
        <item>yue, 粤语</item>
        <item>kor, 韩语</item>
        <item>fra, 法语</item>
        <item>spa, 西班牙语</item>
        <item>th, 泰语</item>
    </string-array>

    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>dnn, 推荐模型，新版本</item>
        <item>model-vad, 默认，旧版模型</item>
        <item>touch,  关闭静音断句功能。用戶手动停止录音</item>
        <item>mfe, 算法实现vad，不推荐</item>
    </string-array>
    <string name="_model_default"></string>
    <string-array name="_model_list">
        <item>@string/vad_default</item>
        <item>search, 搜索模型，默认， 适用于短句， 无逗号，可以有语义</item>
        <item>input, 输入法模型，适用于长句及长语音，有逗号分割， 无语义</item>
    </string-array>
    <string name="vad_timeout_default"></string>
    <string-array name="vad_timeout_list">
        <item>@string/vad_timeout_default</item>
        <item>0, 开启长语音（离线不支持）。建议长句输入模型。</item>
        <item>800, 毫秒，静音800ms后断句，适用于输入短语</item>
        <item>2000, 毫秒，静音2000ms后断句，适用于输入长句</item>
        <item>2230, 毫秒，请修改代码中的VAD_ENDPOINT_TIMEOUT，自定义时长（800ms-3000ms之间）</item>
    </string-array>

    <string name="prop_default"></string>
    <string-array name="prop_list">
        <item>@string/prop_default</item>
        <item>10005, 热词（默认）</item>
        <item>10060, 地图</item>
        <item>10001, 音乐</item>
        <item>10002, 视频</item>
        <item>10003, 应用</item>
        <item>10004, 网页</item>
        <item>10006, 购物</item>
        <item>10007, 健康</item>
        <item>10008, 打电话</item>
        <item>10008, 超级电话</item>
        <item>10052, 医疗</item>
        <item>10053, 汽车</item>
        <item>10054, 娱乐餐饮</item>
        <item>10055, 财经</item>
        <item>10056, 游戏</item>
        <item>10057, 菜谱</item>
        <item>10058, 助手</item>
        <item>20000, 输入</item>
    </string-array>
</resources>