<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root_screen">
    <PreferenceCategory android:title="常用">
        <ListPreference
            android:key="_language"
            android:entries="@array/language"
            android:entryValues="@array/language"
            android:title="语种, 默认普通话"
            android:summary=""
            android:defaultValue="@string/language_default"
            android:dialogTitle="语种"/>
        <ListPreference
            android:key="_model"
            android:defaultValue="@string/_model_default"
            android:dialogTitle="长短句"
            android:entries="@array/_model_list"
            android:entryValues="@array/_model_list"
            android:summary=""
            android:title="短句输入或者长句输入" />
        <ListPreference
            android:key="decoder"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="纯在线/在线和离线语法"
            android:entries="@array/decoder_list"
            android:entryValues="@array/decoder_list"
            android:summary=""
            android:title="纯在线 或 在线+离线语法" />
    </PreferenceCategory>
    <PreferenceCategory android:title="高级">
        <ListPreference
            android:key="vad"
            android:entries="@array/vad_list"
            android:entryValues="@array/vad_list"
            android:title="VAD算法"
            android:summary=""
            android:defaultValue="@string/vad_default"
            android:dialogTitle="VAD"/>
        <ListPreference
            android:key="vad.endpoint-timeout"
            android:defaultValue="@string/vad_timeout_default"
            android:dialogTitle="VAD"
            android:entries="@array/vad_timeout_list"
            android:entryValues="@array/vad_timeout_list"
            android:summary=""
            android:title="VAD时长设置，请勿选长语音" />
        <ListPreference
            android:key="infile"
            android:defaultValue="@string/infile_default"
            android:dialogTitle="外部音频"
            android:entries="@array/infile_list"
            android:entryValues="@array/infile_list"
            android:summary=""
            android:title="外部音频" />
        <CheckBoxPreference
            android:key="_outfile"
            android:defaultValue="false"
            android:summary="同时开启'音频回调CALLBACK_EVENT_ASR_AUDIO参数'才生效，默认保存路径 /sdcard/baiduAsr/outfile.pcm 见代码中OUT_FILE参数"
            android:title="保存录音" />
        <CheckBoxPreference
            android:key="_nlu_online"
            android:defaultValue="false"
            android:summary=""
            android:title="是否开启在线语义解析" />
        <ListPreference
            android:key="prop"
            android:defaultValue="@string/prop_default"
            android:dialogTitle="垂直领域（离线不生效）"
            android:entries="@array/prop_list"
            android:entryValues="@array/prop_list"
            android:summary=""
            android:title="垂直领域（在线功能）" />
        <CheckBoxPreference
            android:key="disable-punctuation"
            android:defaultValue="false"
            android:summary="在选择长句（输入法模型）的前提下生效。如用于本地语义解析"
            android:title="禁用标点" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-data"
            android:summary="CALLBACK_EVENT_ASR_AUDIO参数。不需要音频二进制数据的回调，请勿开启，否则影响性能"
            android:title="开启代码中音频回调事件"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-volume"
            android:summary="CALLBACK_EVENT_ASR_VOLUME参数。是否需要音频的音量回调。正常使用请勿开启"
            android:title="开启代码中音量回调事件"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="语义解析-本地及离线语法">
        <ListPreference
            android:key="nlu"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="本地语义解析"
            android:entries="@array/nlu_list"
            android:entryValues="@array/nlu_list"
            android:summary=""
            android:title="本地语义解析，请同时勾选下方的语法文件" />
        <CheckBoxPreference
            android:key="grammer"
            android:defaultValue="false"
            android:summary="在线时及离线时都可以使用本地语义功能。"
            android:title="离线语法及本地语义bsg文件" />
        <CheckBoxPreference
            android:key="_slot_data"
            android:defaultValue="false"
            android:summary="如GRAMMER的bsg文件中，只设置了王五。勾选后会覆盖原来的词条，可以测'打电话给赵六'，但是'打电话给张三'失效"
            android:title="扩展词条，需代码中设置bsg文件生效" />
    </PreferenceCategory>
    <PreferenceCategory android:title="不常用">
        <CheckBoxPreference
            android:key="_tips_sound"
            android:defaultValue="false"
            android:summary=""
            android:title="提示音" />
    </PreferenceCategory>
</PreferenceScreen>