<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root_screen">
    <PreferenceCategory android:title="语义功能只能使用短句模型（搜索模型）">
    </PreferenceCategory>
    <PreferenceCategory android:title="语义解析-在线">
        <CheckBoxPreference
            android:key="_nlu_online"
            android:defaultValue="false"
            android:summary=""
            android:title="是否开启在线语义解析" />
    </PreferenceCategory>
    <PreferenceCategory android:title="语义解析-本地，GRAMMER参数在demo的代码中设置">
        <ListPreference
            android:key="decoder"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="纯在线/在线和离线语法"
            android:entries="@array/decoder_list"
            android:entryValues="@array/decoder_list"
            android:summary=""
            android:title="纯在线 或 在线+离线语法" />
        <ListPreference
            android:key="nlu"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="本地语义解析"
            android:entries="@array/nlu_list"
            android:entryValues="@array/nlu_list"
            android:summary=""
            android:title="本地语义解析，请同时勾选下面的语法文件" />
        <CheckBoxPreference
            android:key="_grammar"
            android:defaultValue="false"
            android:summary=""
            android:title="本地语义文件，请同时开启上面的本地语义解析（同时也是离线语法文件）" />
        <CheckBoxPreference
            android:key="_slot_data"
            android:defaultValue="false"
            android:summary="如GRAMMER的bsg文件中，只设置了王五。勾选后会覆盖原来的词条，可以测'打电话给赵六'，但是'打电话给张三'失效"
            android:title="扩展词条，需代码中设置bsg文件生效" />
    </PreferenceCategory>
    <PreferenceCategory android:title="常用">
    </PreferenceCategory>
    <PreferenceCategory android:title="高级">
        <ListPreference
            android:key="vad"
            android:defaultValue="@string/vad_default"
            android:dialogTitle="VAD"
            android:entries="@array/vad_list"
            android:entryValues="@array/vad_list"
            android:summary=""
            android:title="VAD" />
        <ListPreference
            android:key="infile"
            android:defaultValue="@string/infile_default"
            android:dialogTitle="外部音频"
            android:entries="@array/infile_list"
            android:entryValues="@array/infile_list"
            android:summary=""
            android:title="外部音频" />
        <ListPreference
            android:key="prop"
            android:defaultValue="@string/prop_default"
            android:dialogTitle="垂直领域（离线不生效）"
            android:entries="@array/prop_list"
            android:entryValues="@array/prop_list"
            android:summary=""
            android:title="垂直领域（在线功能）" />
        <ListPreference
            android:key="vad.endpoint-timeout"
            android:defaultValue="@string/vad_timeout_default"
            android:dialogTitle="VAD"
            android:entries="@array/vad_timeout_list"
            android:entryValues="@array/vad_timeout_list"
            android:summary=""
            android:title="VAD时长设置，请勿选长语音" />
    </PreferenceCategory>
    <PreferenceCategory android:title="不常用">
        <CheckBoxPreference
            android:key="_tips_sound"
            android:defaultValue="false"
            android:summary=""
            android:title="提示音" />
        <CheckBoxPreference
            android:key="_outfile"
            android:defaultValue="false"
            android:summary="保存路径为临时目录。 如/sdcard/outfile.pcm"
            android:title="保存录音" />
        <CheckBoxPreference
            android:key="disable-punctuation"
            android:defaultValue="false"
            android:summary="在选择长句（输入法模型）的前提下生效。如用于本地语义解析"
            android:title="禁用标点" />
        <CheckBoxPreference
            android:key="accept-audio-data"
            android:defaultValue="false"
            android:summary="不需要改回调，请勿开启，影响性能"
            android:title="开启代码中音频回调事件（asr.audio）" />
        <CheckBoxPreference
            android:key="accept-audio-volume"
            android:defaultValue="false"
            android:summary="CALLBACK_EVENT_ASR_VOLUME参数。是否需要音频的音量回调。正常使用请勿开启"
            android:title="开启代码中音量回调事件" />
    </PreferenceCategory>
</PreferenceScreen>